# fastapi-gym-backend

./: .gitignore  README.md  documentacao_academia_api.md  pyproject.toml
app/: app.py
app/models/: __init__.py  accounts.py
app/routers/: accounts.py
app/schemas/: accounts.py
docs/: gym_api_documentation.md
migrations/: env.py
migrations/versions/: 89f596f4635c_initial_tables.py  e6e2723c3e61_create_table_user_student_and_teacher.py
