[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Kaio",email = "kaioherculano12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.139.1,<0.140.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "sqlalchemy[asyncio] (>=2.0.51,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "uuid (>=1.30,<2.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
